Week-6/demo-ingress/demo-ingress-micrometer.yml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: demo-ingress 
  namespace: ben-space
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1 
spec: 
  rules: 
    - http:
        paths: 
        - pathType: Prefix
          path: "/micro/(.*)"
          backend: 
            service: 
              name: micrometer-service
              port: 
                number: 7400
